kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-flask
  namespace: morse
  labels:
    app: nginx-flask
spec:
  selector:
    matchLabels:
      app: nginx-flask
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: nginx-flask
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: nginx-flask
          image: ghcr.io/robalb/morsechat:sha-7190667585f9244b1d23b94839097255c9a491d2
          ports:
            - containerPort: 80
          livenessProbe:
            exec:
              command:
                - curl
                - '-X POST'
                - http://localhost/api/v1/page_init?k8s-liveness-probe
            timeoutSeconds: 2
            initialDelaySeconds: 5
            periodSeconds: 60
