kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  nginx-flask
  namespace: morse
spec:
  externalTrafficPolicy: Local
  selector:
    app:  nginx-flask

  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP #optional protocol
