kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-flask
  namespace: morse
  annotations:
    # (Optional): Annotations for the Ingress Controller
    # Middleware:
    # WARNING: the name of the middleware is namespace-name@kubernetescrd
    #          so we are forced to hardcode the namespace. helm/kustomize may helm here
    traefik.ingress.kubernetes.io/router.middlewares: morse-redirectscheme@kubernetescrd, morse-ratelimit@kubernetescrd
spec:
  rules:
  - host: "morse.halb.it"
    http:
      paths:
      # Path-based routing settings:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: nginx-flask
            port:
              number: 80
  tls:
  - hosts:
    - "morse.halb.it"
    secretName: morse-cert  #name of the tls secret. Make sure this is defined first
---
# Redirect to https
# https://stackoverflow.com/questions/68575472/k3s-redirect-http-to-https
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
  namespace: morse
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
# Basic ratelimit
# https://github.com/traefik/traefik/issues/4549
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ratelimit
spec:
  rateLimit:
    period: 1m
    average: 50
    burst: 50
